clusters/hetzner-dr/apps/paymentops-site/overlays/dr/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentops-website
  namespace: paymentops-site
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: paymentops-website
          image: ghcr.io/cloodnova/paymentops-website:22548e3bf555964cf0f423ed6470a846d2a2e1f7
